# aix

./: .clauderc  .gitignore  LICENSE  README.md  env.example  justfile  pyproject.toml
.claude/: settings.json
.claude/agents/: quantdev.md
.claude/shared/: qubx-config.md  qubx-data.md  qubx-implementing-streaming-indicators.md  qubx-notebooks.md  qubx-strategy-debugging.md  qubx-strategy.md
docs/: CLI_GUIDE.md  FINAL_SUMMARY.md  IMPLEMENTATION.md  KNOWLEDGE_REGISTRY.md  MCP_CONFIGURATION_STATUS.md  MCP_TOOLS_TROUBLESHOOTING.md  QUANTDEV_AGENT_UPDATE.md  RAG_IMPLEMENTATION_SUMMARY.md  REINDEX_OPTIMIZATION.md  RESTRUCTURING_SUMMARY.md  TEST_DATA_STRUCTURE.md  TO_REVIEW_SINGLE_DB_REFACTORING.md  USAGE.md
src/xlmcp/: __init__.py  config.py  server.py  utils.py
src/xlmcp/cli/: __init__.py
src/xlmcp/tools/jupyter/: __init__.py  client.py  kernel.py  notebook.py
src/xlmcp/tools/projects/: __init__.py  manager.py  models.py  storage.py
src/xlmcp/tools/rag/: __init__.py  indexer.py  metadata.py  models.py  parsers.py  registry.py  searcher.py  storage.py
src/xmcp/: __init__.py  client.py  config.py  server.py  utils.py
src/xmcp/cli/: __init__.py
src/xmcp/tools/: __init__.py  kernel.py  notebook.py
src/xmcp/tools/jupyter/: __init__.py  kernel.py  notebook.py
src/xmcp/tools/rag/: __init__.py  indexer.py  metadata.py  models.py  parsers.py  registry.py  searcher.py  storage.py
tests/data/knowledge1/research/options/: SC01_Continuous_Processes_Brownian_Motion.md  SC02_Ito_Formula_Product_Rule.md  SC03_Change_of_Measure_CMG.md
tests/data/knowledge1/research/risk-management/: test_risk_management.md
tests/data/knowledge1/strategies/backtests/: test_backtest.md
tests/data/knowledge1/strategies/ideas/: test_ideas.md
tests/xlmcp/: test_rag_indexing.py  test_rag_metadata.py  test_rag_search.py
tests/xmcp/: test_rag_indexing.py  test_rag_metadata.py  test_rag_search.py
